syntax = "proto3";

option csharp_namespace = "GrpcServerExample";

package product;

service Products {
  // Sends a greeting
  rpc GetAll (ProductRequest) returns (ProductResponse);
}

message ProductRequest {}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string price = 4;
}

