syntax = "proto3";

option csharp_namespace = "InventoryService";

package inventory.v1;

// The greeting service definition.
service Inventory {
  // Sends a greeting
  rpc CheckCurrentStock (InventoryRequest) returns (InventoryResponse);
}

// The request message containing the user's name.
message InventoryRequest {
  int32 product_id = 1;
}

// The response message containing the greetings.
message InventoryResponse {
 int32 product_id = 1;  
int32 stock = 2;
}
